--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Селекторы</title>
+    <link href="style.css" rel="stylesheet" />
+    <!--
+      Используя селекторы элементов, классов и комбинаторы:
+
+      1) сделать цвет текста всех параграфов синим
+      2) увеличить размер шрифта Text1, Text2, Text3
+      3) cделать все буквы большими только у Text1,Text3
+      4) подчеркнуть Text0, Text3
+      5) добавить тень только Text3
+-->
+  </head>
+  <body>
+    <p class="mainText">Text0</p>
+    <div class="size">
+      <p class="caps">Text1</p>
+      </span>
+      <section>
+        <p>Text2</p>
+      </section>
+      <p class="mainText caps shadow">Text3</p>
+    </div>
+  </body>
+</html>
