--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h2>Goodbye</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <i>Hello batum</i>
+  </body>
+  
+</html>
