--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>orange</title>
   </head>
   <body>
-    <i>Hello batum</i>
+    <i>Creative studio orange</i>
+    <img src="2. Orange creative studio/photo1.jpg"/>
+    <img src="2. Orange creative studio/photo2.jpg"/>
+    <img src="2. Orange creative studio/photo3.jpg"/>
   </body>
   
 </html>
