--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <title>orange</title>
+    <meta charset="utf-8">
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <i>Creative studio orange</i>
+    <p align="center" class="color size">Creative studio orange</p>
     <img src="2. Orange creative studio/photo1.jpg"/>
     <img src="2. Orange creative studio/photo2.jpg"/>
-    <img src="2. Orange creative studio/photo3.jpg"/>
+    <p class="color size">Our social networks</p>
+    <p><a class="size" target="_blank" href="https://instagram.com/creative.studio.orange_batumi?igshid=YmMyMTA2M2Y=">Instagram</a></p>
+    
   </body>
   
 </html>
