--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
-    <title>orange</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Селекторы</title>
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <p align="center" class="color size">Creative studio orange</p>
-    <img src="2. Orange creative studio/photo1.jpg"/>
-    <img src="2. Orange creative studio/photo2.jpg"/>
-    <p class="color size">Our social networks</p>
+    <h1 align="center">Creative Studio Orange</h1>
+    <center><img src="photo1.jpg" alt="photo" /></center>
+    <p class="color size">Our social networks:</p>
     <p><a class="size" target="_blank" href="https://instagram.com/creative.studio.orange_batumi?igshid=YmMyMTA2M2Y=">Instagram</a></p>
+    <p class="color size">Our address:</p>
+    <p class="color1 size">221B Baker Street</p>
     
   </body>
-  
 </html>
